# mergify-stargazer

./: .gitignore  README.md  main.py  pyproject.toml
src/: github_api.py  stargazer_api.py  stargazer_core.py  stargazer_service.py
tests/: test_e2e.py  test_extract_link.py  test_generate_pages.py
